external-crates/move/move-compiler/tests/move_2024/parser/ability_modifier_postfix_no_abilities_with_semi.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/ability_modifier_postfix_no_abilities_with_semi.move:4:29
  │
4 │     public struct Foo {} has;
  │                             ^ Unexpected ';'. Expected a type ability, one of: 'copy', 'drop', 'store', or 'key'

