external-crates/move/move-compiler/tests/move_2024/parser/ability_modifier_postfix_no_abilities_with_semi.move
address 0x42 {
module M {
    // Postfix ability declarations require at least one ability.
    public struct Foo {} has;
}
}
